--- a/1411131043/readme
+++ b/1411131043/readme
@@ -1,1 +1,34 @@
 
+
+#include <stdio.h>
+
+int main(void)
+{
+	int integer1;
+	int integer2;
+	int sum;
+	int sub;
+	int product;
+	int div;
+	int rem;
+
+	printf("Enter first integer\n");
+	scanf_s("%d", &integer1);
+
+	printf("Enter second integer\n");
+	scanf_s("%d", &integer2);
+
+	sum = integer1 + integer2;
+	sub = integer1 - integer2;
+	product = integer1 * integer2;
+	div = integer1 / integer2;
+	rem = integer1 % integer2;
+
+
+	printf("Sum is %d\n", sum);
+	printf("Difference is %d\n", sub);
+	printf("Product is %d\n", product);
+	printf("Quotient is %d\n", div);
+	printf("Remainder is %d\n", rem);
+
+}
